# backend/server.js
@@ -72,10 +72,10 @@ app.use((error, req, res, next) => {
   res.json({ message: error.message || "An unknown error occurred!" });
 });
 
-const dbUrl = `mongodb+srv://${process.env.USER}:${process.env.PASSWORD}@cluster0.f8yjf.mongodb.net/${process.env.DATABASE}?retryWrites=true&w=majority`;
+const dbUrl = `mongodb+srv://${process.env.USER}:${process.env.PASSWORD}@cluster0.kc91knb.mongodb.net/${process.env.DATABASE}?retryWrites=true&w=majority`;
 
 mongoose
-  .connect(dbUrl, { useNewUrlParser: true, useUnifiedTopology: true })
+  .connect(dbUrl,{ useNewUrlParser: true, useUnifiedTopology: true })
   .then(() => {
     console.log("MongoDB connected");
     app.listen(5011);
